--- a/.github/workflows/hawkeye.yml
+++ b/.github/workflows/hawkeye.yml
@@ -1,4 +1,13 @@
-hawkeye_test:
+# This is a basic workflow to help you get started with Actions
+
+name: Hawkeye security scan
+
+# Controls when the action will run. Triggers the workflow on push or pull request on any branch
+on: [push, pull_request]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  hawkeye_test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container:
